// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OE - Heading renders correctly 1`] = `
<jest>
  <h2
    class="fw-bold mb-4 bcl-heading"
  >
    A title created by the bcl heading template
  </h2>
</jest>
`;

exports[`OE - Heading renders correctly with a link 1`] = `
<jest>
  <h2
    class="fw-bold mb-4 bcl-heading"
  >
    <a
      class="standalone"
      href="/example.html"
    >
      A title created by the bcl heading template
    </a>
  </h2>
</jest>
`;

exports[`OE - Heading renders correctly with a link and a title 1`] = `
<jest>
  <h2
    class="fw-bold mb-4 bcl-heading"
  >
    <a
      class="standalone"
      href="/example.html"
    >
      A title created by the bcl heading template
    </a>
  </h2>
</jest>
`;

exports[`OE - Heading renders correctly with custom tag 1`] = `
<jest>
  <h3
    class="fw-bold mb-4 bcl-heading"
  >
    A title created by the bcl heading template
  </h3>
</jest>
`;
